@@ -1,10 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 0.64-ppport.patch 720 SHA256 32ef45dbc2515f584c2878e557459296d8cd88b1c18beed03179f878e2cf0a1a SHA512 bc17b411d741fd02bb84efbbb6e7978526d036487db786f0c12e31b1665ef94bf54fe7a3c0c482cb57f5e77b2174cf4595ee9171ce40710c662400c04df2bf08 WHIRLPOOL fb6fad6d0fab6ed73a2c5e10da2493fecc081259503f670aa3568816b898ac8c198c731abf36f1a46167a9850737eb8c69d1da1bde40f6ac4e21d97cecb678fa
 DIST Mouse-0.64-ppport.h.bz2 39634 SHA256 adbd5a9eb45a677b948b9c119815977df82981991dfd66b2eecb44a47ff61c7a SHA512 23316f5e814677ae84968da9733cc19f0b6732e4e8dcc97333e4d56523ed9bf2f41cc2ec8a82d6d66b43161f8ec0d0b9e661a2b01432f8dd9fdf4167c4a697fd WHIRLPOOL c4551c16c3146ce57753d1c005ffbd75d223d526681e4562bcc9520a5d77bbf4ff52412ea29021757bb731d271173ef39683e3a56b4359f2b61fb494560acefb
 DIST Mouse-0.97.tar.gz 229149 SHA256 dfb1f3abbc46e7646a685efa4e5804c4cf9772eb807ac6abf8f1d1529b57b97a SHA512 a213d22701f9beef91d97eb6f9223a57a13f8d23d9452cd7802e951d95b42997525362a0e5cc7799fb628cceb1ca88541bb9f649c365e65a18463ad88e24efdf WHIRLPOOL bc2138bd62bad92fc476eff62f0c06cc36130859a4a415b4faf65feb11e089d88c386504ca6c40fd7352562fe2d5d419d328d13eeaed5092f070ba89fe235592
 DIST Mouse-1.05.tar.gz 232827 SHA256 1eb995904be2d1848297fa278430729d3ff87855d3dfd47194913c06913ef792 SHA512 53331be37fbef28e1826a1ca0503caacd155824ef80678f8215432725f26c43b20d3c95bfd14a9a58a5fe7a997e2671f19c0abb120de34bf95b3d245276ea675 WHIRLPOOL cdbad52438a9477490ec09414db3d7b4440a41e41c9fadfd53e8127371f6e09945fd39af1b46615d1bb89055ccbce1ab0fb62c2bb3a2738628cd3d018afe95cd
 DIST Mouse-2.4.1.tar.gz 220438 SHA256 3f1000351ae419ecc68e439671e3352d80424568c37b3e6ac7c6bdcbbe8711e1 SHA512 2e76a8c7cc27d7bc128127dd38cb7bc1d3d7eed324f0a8fdea90f21e234c132884e460a6e19c9bf9f26e9f78cb24afea5dbf08495cd980db5bd56d0c8f0200f2 WHIRLPOOL 1ff91b97639879a5eec2dfe4e413dcfdb3b9610d167721bd17b9e9ed1e2e4fa59567578d727d5bb7e0ab9b396b91928c5cbd012f04fda0a01535669e3fe68cea
-EBUILD Mouse-0.970.0.ebuild 753 SHA256 a0a2d0b870873cac9bf58c018c37031d5e1624788113d826723c7e8d0ca21742 SHA512 c88041cf76b6d44ba4a6175e9aa4a6f192b35223e1de265f657d9f25405b7f3532ff2755c7aef7b5f6620cbc81436d3092dd422f2445916052017363d51203b7 WHIRLPOOL cc2ffc50b031883ded5899979aeedd63f3e463897fe115e91a54fb7b553cef009e74f17128d4259d5026c26f455f3f17d9b59a6fa5257ceba5a3cd8e4edd952e
+EBUILD Mouse-0.970.0-r1.ebuild 758 SHA256 fc6c057915736e17db5327a6fb922d1635415b06b895d5a1c7479d0345684660 SHA512 64ada39ed5638cdf4f0d0465ed823cad447e97ca8c1fc0a69575cb63061c41e2ee18c9fd4c62e76565cd91779c7f35b12f80b51d428455b69b583385fe059457 WHIRLPOOL a997151a493684a3404000a6be4cdca5b411cab63db80594379fc91af597f04f10e91e899d2d9beb679a19c8fc263625894498a8b9641d66fdc3c6dbb3477c32
 EBUILD Mouse-1.50.0.ebuild 778 SHA256 baabce562c8ca04105e542e35cbb0e1d939b7ab0e99902ca51882647cc426dde SHA512 e95138b4b9e280eaa72436e03373b0cf21cf4167b84c0ea23bb96e537eebbe40b6eacca811f0d9c354a4ad31bb32c5a0c26438c3442dfd46af36b491b3649557 WHIRLPOOL b6ae61057163c13ed084a63cf552711b3721cc1ca1bb16c59d6c6642fc94742d638d3dfcc04fd5072f0eeedf84d796b281d3618c0511bbefd61ffc4e59373bee
 EBUILD Mouse-2.4.1.ebuild 888 SHA256 3a811aa409c4f2553d8c4e4d7cd3de128365cfa2c3c6b76da63191f83b4e2a36 SHA512 303385e4390946ad7a5b2a0629d66f0761b2c167ee7a52fd59a9524b118abfc7c5eb6576abc5f947a9edae30f31ba1ea2c5772060ec0c7b12e9e306f91431aa3 WHIRLPOOL 71349b7c0aaf8fd6a81e46538f50831b3ffeb8442c00539c1339ae6d1a381a042340291489d05d8a9564612443b278e538bf9e9e8254cc149f932fcc1a53127e
-MISC ChangeLog 6030 SHA256 d2901d0610bcff34b0d47178b3e30769e1116971655df4883c054e97a7e77bbd SHA512 0d7b6101e198f5ba9840206fe5a85b916b6e2ca461825e0ff835b3063940c416179f15e2633e573451158f2d8adee2247979853fa4e87aed26fc7d6c7d29c569 WHIRLPOOL b9a9536bf4ea38d59031e0d8b020203c53d45ce606fa68295e2ecb6e96f375cbe00f3ba70221a8402a7f54972ce26594e82f8c37bc89a5120b218935d62ed052
+MISC ChangeLog 6186 SHA256 085e98e00490f63e1547fd40c55b68b9484d5bdc11a8ed867b4ddc84a1a04c82 SHA512 4fa0333939a549bd0fd5bd6674518511f9f480f1afe7b80fe90131c534bedbe1bf95a944596e9cdd7fa231304cba53655a7d12251af102ebebece3f299db01b0 WHIRLPOOL 6908bb982857c84651417a8da7bdd49b1ed7ec7bc90b09dbe22004f75c29a39f77a1218feb457763f652bfd5a10f29f1b54b1244d395d7160dcb7b49660070f7
 MISC metadata.xml 2106 SHA256 083b6087d79a8ad34f266eb4491c21285b990f905830f6c280578048b8880112 SHA512 80698c75695ec2a419bf324de999a7c54996d33c1ae69db27c7edc54e8ed122a712f928d1f0a88af7ad93751c359ba171d463d63711c7a071b82947e5baafbe3 WHIRLPOOL d97924b93d9b73b2aeb56704231d3c5dfe228f2ebb007cfb9af9d09f671766e115c5345443a79aed634230ffb70b70a3345c04ae738b70228df6bab2208c4423
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUX6R/AAoJEJS/30SErRQvIf0P/3xHvcDrNdJES/mxgp8tNRP+
+sUqC6WK9ROouDiViQMuwnLzEZMILBQ69U2NbLhvQsqSou+Anl6+qrrs6r7OfLQ2y
+Cr+hmmtR+j7sFKz3MhbFTrFgH6JGy78Nz35vs2p+NAHfYUsPBEp1jNx3yBE65llt
+3QA0pB5Kzh9vFMRTo4eWG96TkZBncQHonMXkRJq/BG643YRfSr0FYF1AxV+Jge2g
+t944pzYKfvkgWGWhnrRmhJCZDUMdDyKfLDxhQERUaxlnP6qJZZu1A+/0qasF5Bnr
+65fIvPlgjbmEkcJQrw8jElTHyhY0rraGsfeFgnKqiF8ufH52/Od/ewk+erPZbzqg
+icV3JKGDcgYM9YT0ur1HYOfjnP7q7WpvLg3P/v9NtpVf0v3QqBK08hmToigUmk8A
+RVKBwPb3CCiI+QpeggbV54l5lpY72WZBl5Gr44oU/wtbul4puMZ3Fqw2B9dIPCbC
+XORMmMlodW/SGLWJcFH51E76WpXSgDC42dI1VTaPnuKJoD3Z0Xu18iscVuwkocJC
+hz4lpIa4ohVa3nrxDJQp44G61wSgmaVrCUCqd01iNZUxrY5S8r8C7/xEyaA4ExJf
+jw2Rna0X2pP2Ihy8VsJYILFemRq1ao5r6FkRFYKku2X+WOTzSITk8tq2J1VQbtn5
+MI2D6bj+zuufFt5neEPQ
+=5BTZ
+-----END PGP SIGNATURE-----
