@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mouse/Mouse-0.970.0.ebuild,v 1.3 2012/05/28 16:07:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mouse/Mouse-0.970.0-r1.ebuild,v 1.1 2014/11/09 17:28:51 dilfridge Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=GFUJI
 MODULE_VERSION=0.97
